--- a/src/app/sugestion-form/sugestion-form.component.html
+++ b/src/app/sugestion-form/sugestion-form.component.html
@@ -1,8 +1,8 @@
 <div>
-  <form>
+  <form [formGroup]="suggestionForm" (ngSubmit)="addRestaurant()">
     <mat-form-field appearance="fill">
       <mat-label>Restaurant</mat-label>
-      <input matInput type="text" />
+      <input matInput formControlName="name" type="text" />
     </mat-form-field>
     <button mat-button color="primary" type="submit">ajouter</button>
   </form>
