Read restaurants from Firestore

--- a/src/app/sugestion-form/sugestion-form.component.html
+++ b/src/app/sugestion-form/sugestion-form.component.html
@@ -6,5 +6,8 @@
     </mat-form-field>
     <button mat-button color="primary" type="submit">ajouter</button>
   </form>
-  {{ message }}
+</div>
+
+<div>
+  <app-suggestion-list></app-suggestion-list>
 </div>
