--- a/src/app/suggestion-list/suggestion-list.component.html
+++ b/src/app/suggestion-list/suggestion-list.component.html
@@ -2,6 +2,16 @@
 
 <ng-template #restauList>
   <div *ngFor="let restau of restaurants$ | async">
-    {{ restau.name }}
+    {{ restau | json }}
+    <div>Nom : {{ restau.name }}</div>
+    <div>Ajouté le : {{ restau.createdAt | date: "dd/MM/yyyy à HH:mm" }}</div>
+    <div>
+      <button mat-stroked-button color="primary" (click)="vote(restau.id)">
+        +
+      </button>
+      Votes :
+      {{ restau.votes }}
+    </div>
+    <br />
   </div>
 </ng-template>
