Voting for a restaurant

--- a/src/app/suggestion-list/suggestion-list.component.html
+++ b/src/app/suggestion-list/suggestion-list.component.html
@@ -6,7 +6,7 @@
     <div>Nom : {{ restau.name }}</div>
     <div>Ajouté le : {{ restau.createdAt | date: "dd/MM/yyyy à HH:mm" }}</div>
     <div>
-      <button mat-stroked-button color="primary" (click)="vote(restau.id)">
+      <button mat-stroked-button color="primary" (click)="vote(restau)">
         +
       </button>
       Votes :
