--- a/src/app/suggestion-list/suggestion-list.component.html
+++ b/src/app/suggestion-list/suggestion-list.component.html
@@ -9,8 +9,7 @@
       <button mat-stroked-button color="primary" (click)="vote(restau)">
         +
       </button>
-      Votes :
-      {{ restau.votes }}
+      {{ setRankLabel(restau) }}
     </div>
     <br />
   </div>
