Order by restaurant name + votes ranking

--- a/src/app/suggestion-list/suggestion-list.component.html
+++ b/src/app/suggestion-list/suggestion-list.component.html
@@ -1,3 +1,5 @@
+<app-restaurant-ranking [restaurants$]="restaurants$"></app-restaurant-ranking>
+
 <div *ngIf="!(restaurants$ | async); else restauList">loading</div>
 
 <ng-template #restauList>
