--- a/src/app/restaurant-ranking/restaurant-ranking.component.html
+++ b/src/app/restaurant-ranking/restaurant-ranking.component.html
@@ -1,8 +1,12 @@
 <h3>Résultats</h3>
 <div *ngIf="sortedRestaurants">
-  <ul>
-    <li *ngFor="let restau of sortedRestaurants">
-      {{ restau.votes }} votes pour {{ restau.name }}
-    </li>
-  </ul>
+  <mat-selection-list [multiple]="false">
+    <mat-list-option
+      *ngFor="let restau of sortedRestaurants"
+      [value]="restau.id"
+    >
+      {{ restau.votes }} vote{{ restau.votes > 1 ? "s" : "" }} pour
+      {{ restau.name }}
+    </mat-list-option>
+  </mat-selection-list>
 </div>
