--- a/src/app/restaurant-ranking/restaurant-ranking.component.html
+++ b/src/app/restaurant-ranking/restaurant-ranking.component.html
@@ -7,6 +7,7 @@
     <mat-list-option
       *ngFor="let restau of sortedRestaurants"
       [value]="restau"
+      (click)="openDialog(restau)"
     >
       {{ restau.votes }} vote{{ restau.votes > 1 ? "s" : "" }} pour
       {{ restau.name }}
